fixed alignment & spacings

--- a/assets/base.css
+++ b/assets/base.css
@@ -109,14 +109,10 @@ body:has(.section-header .drawer-menu) .announcement-bar-section slideshow-compo
 
 .page-width-desktop {
   padding: 0;
-  margin: 0 auto;
+  margin: 0 1.5rem;
 }
 
 @media screen and (min-width: 750px) {
-  .page-width {
-    padding: 0 0rem;
-  }
-
   .header.page-width {
     padding-left: 3.2rem;
     padding-right: 3.2rem;
@@ -127,7 +123,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section slideshow-compo
   }
 
   .page-width-desktop {
-    padding: 0;
+    padding: 0 1.5rem;
   }
 
   .page-width-tablet {
@@ -148,7 +144,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section slideshow-compo
 
   .page-width-desktop {
     max-width: var(--page-width);
-    padding: 0;
+    padding: 0 1.5rem;
   }
 }
 
@@ -3714,7 +3710,7 @@ body{
 =========================*/
 .announcement-bar{
   background: var(--bg-color);
-  min-height: 40px;
+  min-height: 37px;
   padding: 5px 0;
 }
 
@@ -4810,7 +4806,7 @@ product-variant-swatches input[type=radio]:checked+label.quantity-swatch{
   grid-template-columns: 1fr;
   align-items: center;
   grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  grid-row-gap: 40px;
 }
 
 .section-image-content .media-block .media-video-wrap{
@@ -6434,13 +6430,6 @@ product-variant-swatches input[type=radio]:checked+label.quantity-swatch{
   }
 }
 
-.rounded-5 {
-  border-radius: 5%;
-  -webkit-border-radius: 5%;
-  -moz-border-radius: 5%;
-  -ms-border-radius: 5%;
-  -o-border-radius: 5%;
-}
 
 .on-mobile-flex {
   display: none !important;
@@ -6504,11 +6493,15 @@ product-variant-swatches input[type=radio]:checked+label.quantity-swatch{
 }
 .grid-cols-2-lap {
   display: grid;
-  grid-template-columns: 65% 35%; /* Define column widths for larger screens */
+  grid-template-columns: auto 35%; /* Define column widths for larger screens */
+  column-gap: 80px;
+  row-gap: 40px;
 }
 .grid-cols-2-lap-reverse {
   display: grid;
-  grid-template-columns: 35% 65%; /* Define column widths for larger screens */
+  grid-template-columns: 35% auto; /* Define column widths for larger screens */
+  column-gap: 80px;
+  row-gap: 40px;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -6666,9 +6659,7 @@ product-variant-swatches input[type=radio]:checked+label.quantity-swatch{
   .order-image {
     order: 1 !important;
   }
-  .media-block {
-    padding: 0 40px;
-  }
+
 
 }
 
@@ -6716,4 +6707,15 @@ product-variant-swatches input[type=radio]:checked+label.quantity-swatch{
   right: 10px;
  }
 
-
+/* tablet */
+ @media (min-width: 768px) and (max-width: 1024px) {
+  .page-width {
+    padding: 10 20rem;
+  }
+ }
+/* desktop */
+ @media (min-width: 1025px) {
+  .page-width {
+    padding: 0 1.5rem;
+  }
+ }
